# que_agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENCE  README-Docker.md  README.md  api_endpoints.json  docker-compose.dev.yaml  docker-compose.yaml  docker-entrypoint.sh  integration_test_report.json  nginx.conf  pyproject.toml  requirements.txt  startup.py  test_marketing_fix.py
configs/: agent_config.yaml  api_config.yaml  database_config_example.yaml  knowledge_base_config.yaml  llm_config_example.yaml
docs/: CAMPAIGN_LIST_FIX_SUMMARY.md  Customer Support & Marketing Agents.md  Multi-Agent Platform Implementation Report.md  Muti-Agent AI Platform Report  Project Summary.md  Que Agents - Multi-Agent AI Platform.md  Technical Documentation.md  coverage_improvement_summary.md  framework_research.md  system_test_summary.md  test_financial_trading_bot_agent_summary.md  test_main_summary.md  test_marketing_agent_summary.md  test_personal_virtual_assistant_agent_summary.md  test_summary.md  vector_db_design_plan.md
scripts/: fix_database_schema.py  migrate_audience_segments.py
template/: index.html
tests/: integration_test.py  test_agents_simple.py  test_api.py  test_auth.py  test_config_manager.py  test_customer_support_agent.py  test_data_validator.py  test_financial_trading_bot_agent.py  test_kb_manager.py  test_main.py  test_marketing_agent.py  test_marketing_agent_comprehensive.py  test_personal_virtual_assistant_agent.py  test_router_customer_support.py  test_router_financial_trading_bot.py  test_router_marketing.py  test_utils_agent_manager.py  (+3 more)
(+34 files in other folders)
